added swagger docs and some unittests
