# app/Http/Controllers/ProjectController.php
@@ -1,79 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use App\Models\Project;
-use Illuminate\Http\Request;
-
-class ProjectController extends Controller
-{
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function index()
-    {
-        $projects = Project::get();
-
-        return response()->json($projects);
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
-    public function store(Request $request)
-    {
-        $project = new Project();
-        $project->name = $request->name;
-        $project->description = $request->description;
-        $project->save();
-
-        return response()->json($project);
-    }
-
-    /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function show($id)
-    {
-        $project = Project::find($id);
-        return response()->json($project);
-    }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function update(Request $request, $id)
-    {
-        $project = Project::find($id);
-        $project->name = $request->name;
-        $project->description = $request->description;
-        $project->save();
-
-        return response()->json($project);
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy($id)
-    {
-        Project::destroy($id);
-
-        return response()->json(['message' => 'Deleted']);
-    }
-}
